--- a/index.html
+++ b/index.html
@@ -10470,75 +10470,30 @@
       }
     });
 
-    // Function to get selected variant combination
-    function getSelectedVariantCombination() {
+    // Function to get any selected color (from any group)
+    function getSelectedColor() {
+      // Check all groups for selected color
       const group1 = document.querySelector('input[name="group-1"]:checked');
       const group2 = document.querySelector('input[name="group-2"]:checked');
       const group3 = document.querySelector('input[name="group-3"]:checked');
 
-      if (!group1 || !group2 || !group3) {
-        return null;
-      }
-
-      return {
-        color1: group1.getAttribute("aria-label"),
-        color2: group2.getAttribute("aria-label"),
-        color3: group3.getAttribute("aria-label"),
-        value1: group1.value,
-        value2: group2.value,
-        value3: group3.value,
-      };
+      // Return the first selected color found, or default to first option
+      const selected = group1 || group2 || group3;
+      return selected ? selected.value : "44537455804696"; // Default to Midnight Black
     }
 
-    // Function to generate redirect URL based on variant combination
-    function getRedirectUrl(variant) {
-      if (!variant) {
-        // Default URL if no variant selected
-        return "https://example.com/checkout/default";
-      }
-
-      // Create a unique identifier based on the combination
-      const combinationKey = `${variant.value1}-${variant.value2}-${variant.value3}`;
-
-      // Define redirect URLs for different combinations
+    // Function to get redirect URL based on selected color
+    function getRedirectUrl(colorValue) {
+      // Define redirect URLs for each color variant
       const redirectUrls = {
-        // All same color combinations
-        "44537455804696-44537455804696-44537455804696":
-          "https://example.com/checkout/triple-midnight-black",
-        "44537455935768-44537455935768-44537455935768":
-          "https://example.com/checkout/triple-sky-blue",
-        "44537455903000-44537455903000-44537455903000":
-          "https://example.com/checkout/triple-lilac",
-        "44537455837464-44537455837464-44537455837464":
-          "https://example.com/checkout/triple-pistachio-green",
-        "44537455870232-44537455870232-44537455870232":
-          "https://example.com/checkout/triple-pink",
-
-        // Mixed combinations - you can add specific URLs for popular combinations
-        "44537455804696-44537455935768-44537455903000":
-          "https://example.com/checkout/black-blue-lilac",
-        "44537455935768-44537455870232-44537455837464":
-          "https://example.com/checkout/blue-pink-green",
-        "44537455903000-44537455804696-44537455870232":
-          "https://example.com/checkout/lilac-black-pink",
-
-        // Add more specific combinations as needed...
+        44537455804696: "https://example.com/midnight-black", // Midnight Black
+        44537455935768: "https://example.com/sky-blue", // Sky Blue
+        44537455903000: "https://example.com/lilac", // Lilac
+        44537455837464: "https://example.com/pistachio-green", // Pistachio Green
+        44537455870232: "https://example.com/pink", // Pink
       };
 
-      // Return specific URL if combination exists, otherwise generate a generic one
-      if (redirectUrls[combinationKey]) {
-        return redirectUrls[combinationKey];
-      } else {
-        // Generate URL based on color names for unlisted combinations
-        const colorSlug = `${variant.color1
-          .toLowerCase()
-          .replace(/\s+/g, "-")}-${variant.color2
-          .toLowerCase()
-          .replace(/\s+/g, "-")}-${variant.color3
-          .toLowerCase()
-          .replace(/\s+/g, "-")}`;
-        return `https://example.com/checkout/custom/${colorSlug}`;
-      }
+      return redirectUrls[colorValue] || redirectUrls["44537455804696"]; // Default to Midnight Black URL
     }
 
     // Add event listener to the Add to Cart button
@@ -10549,14 +10504,14 @@
         addToCartButton.addEventListener("click", function (e) {
           e.preventDefault(); // Prevent default form submission
 
-          // Get selected variant combination
-          const selectedVariant = getSelectedVariantCombination();
+          // Get selected color value
+          const selectedColorValue = getSelectedColor();
 
           // Get redirect URL
-          const redirectUrl = getRedirectUrl(selectedVariant);
+          const redirectUrl = getRedirectUrl(selectedColorValue);
 
           // Optional: Add some analytics or tracking here
-          console.log("Redirecting with variant:", selectedVariant);
+          console.log("Redirecting with color value:", selectedColorValue);
           console.log("Redirect URL:", redirectUrl);
 
           // Redirect to the determined URL
@@ -10568,8 +10523,8 @@
     // Optional: Update URL preview when selections change
     document.addEventListener("change", function (e) {
       if (e.target.matches('input[name^="group-"]')) {
-        const selectedVariant = getSelectedVariantCombination();
-        const redirectUrl = getRedirectUrl(selectedVariant);
+        const selectedColorValue = getSelectedColor();
+        const redirectUrl = getRedirectUrl(selectedColorValue);
 
         // You can display the URL somewhere on the page if desired
         console.log("Current selection would redirect to:", redirectUrl);
@@ -10581,24 +10536,5 @@
         }
       }
     });
-
-    // Alternative: If you want to use a single URL with parameters instead of distinct URLs
-    function getRedirectUrlWithParams(variant) {
-      if (!variant) {
-        return "https://example.com/checkout?variant=default";
-      }
-
-      const params = new URLSearchParams({
-        color1: variant.color1,
-        color2: variant.color2,
-        color3: variant.color3,
-        value1: variant.value1,
-        value2: variant.value2,
-        value3: variant.value3,
-        price: "29.99",
-      });
-
-      return `https://example.com/checkout?${params.toString()}`;
-    }
   </script>
 </html>
