added redirect link

--- a/index.html
+++ b/index.html
@@ -10466,7 +10466,7 @@
     document.addEventListener("DOMContentLoaded", function () {
       const priceActual = document.getElementById("productV10PriceActual");
       if (priceActual) {
-        priceActual.textContent = "£29.99";
+        priceActual.textContent = "£34.97";
       }
     });
 
@@ -10486,11 +10486,11 @@
     function getRedirectUrl(colorValue) {
       // Define redirect URLs for each color variant
       const redirectUrls = {
-        44537455804696: "https://example.com/midnight-black", // Midnight Black
-        44537455935768: "https://example.com/sky-blue", // Sky Blue
-        44537455903000: "https://example.com/lilac", // Lilac
-        44537455837464: "https://example.com/pistachio-green", // Pistachio Green
-        44537455870232: "https://example.com/pink", // Pink
+        44537455804696: "https://n2kzpa-uw.myshopify.com/cart/52337272324429:1", // Midnight Black
+        44537455935768: "https://n2kzpa-uw.myshopify.com/cart/52337272357197:1", // Sky Blue
+        44537455903000: "https://n2kzpa-uw.myshopify.com/cart/52337272389965:1", // Lilac
+        44537455837464: "https://n2kzpa-uw.myshopify.com/cart/52337272422733:1", // Pistachio Green
+        44537455870232: "https://n2kzpa-uw.myshopify.com/cart/52337272455501:1", // Pink
       };
 
       return redirectUrls[colorValue] || redirectUrls["44537455804696"]; // Default to Midnight Black URL
